--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -18,6 +18,7 @@
             android:paddingRight="10sp"
         />
         <EditText
+            android:background="@drawable/rounded_edittext"
             android:id="@+id/username1"
             android:layout_width="150sp"
             android:layout_height="wrap_content"
