--- a/res/drawable-hdpi/blue_button.xml
+++ b/res/drawable-hdpi/blue_button.xml
@@ -5,15 +5,15 @@
       <solid
           android:color="#449aef" />
       <stroke
-          android:width="1dp"
+          android:width="1sp"
           android:color="#2f6499" />
       <corners
-          android:radius="6dp" />
+          android:radius="6sp" />
       <padding
-          android:left="10dp"
-          android:top="6dp"
-          android:right="10dp"
-          android:bottom="6dp" />
+          android:left="10sp"
+          android:top="0sp"
+          android:right="10sp"
+          android:bottom="0sp" />
     </shape>
   </item>
   <item>
@@ -23,15 +23,15 @@
           android:endColor="#2f6499"
           android:angle="270" />
       <stroke
-          android:width="1dp"
+          android:width="1sp"
           android:color="#2f6499" />
       <corners
-          android:radius="6dp" />
+          android:radius="6sp" />
       <padding
-          android:left="10dp"
-          android:top="6dp"
-          android:right="10dp"
-          android:bottom="6dp" />
+          android:left="10sp"
+          android:top="0sp"
+          android:right="10sp"
+          android:bottom="0sp" />
     </shape>
   </item>
 </selector>
