--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,11 +2,11 @@
 <resources>
   <style name="button_text" >
     <item name="android:layout_width" >fill_parent</item>
-    <item name="android:layout_height" >wrap_content</item>
+    <item name="android:layout_height" >0dip</item>
     <item name="android:textColor" >#ffffff</item>
     <item name="android:gravity" >center</item>
     <item name="android:layout_margin" >3sp</item>
-    <item name="android:textSize" >15sp</item>
+    <item name="android:textSize" >12sp</item>
     <item name="android:textStyle" >bold</item>
     <item name="android:shadowColor" >#000000</item>
     <item name="android:shadowDx" >1</item>
