--- a/res/layout/webview.xml
+++ b/res/layout/webview.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<WebView  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/webView1"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:background="#501213"
+              android:paddingTop="10sp"
+              android:orientation="vertical" >
+    <ImageView 
+        android:id="@+id/image1"
+        android:contentDescription="Texas State"
+        android:src="@drawable/mainsite_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="50sp"
+    />
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="50sp"
+        android:indeterminate="true" 
+    />
+    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/webView1"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:visibility="gone"
+    />
+</LinearLayout>
