--- a/res/drawable-hdpi/rounded_edittext.xml
+++ b/res/drawable-hdpi/rounded_edittext.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="#bbc3cc" />
+    <solid android:color="#E9DEDE" />
     <stroke
         android:width="1dp"
         android:color="#3b444c" />
