--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -65,4 +65,9 @@
         android:text="Login" 
         style="@style/button_text" 
     />
+    <TextView
+            android:id="@+id/textview1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+        />
 </LinearLayout>
