--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -15,15 +15,31 @@
         android:layout_gravity="center"
         android:paddingTop="50sp"
     />   
-    <ImageView 
-        android:id="@+id/image2"
-        android:contentDescription="NFC"
-        android:src="@drawable/nfc_logo32x32"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:paddingRight="50sp"
-    />   
+    
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:background="#501213"
+                  android:orientation="horizontal" 
+                  android:layout_gravity="right"
+                  android:paddingRight="50sp">       
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:text="Tap to get "
+            
+        />      
+        <ImageView 
+            android:id="@+id/image2"
+            android:contentDescription="NFC"
+            android:src="@drawable/nfc_logo32x32"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            
+        />   
+    </LinearLayout> 
     
     <LinearLayout
         android:orientation="horizontal"
@@ -75,8 +91,8 @@
         style="@style/button_text" 
     />
     <TextView
-            android:id="@+id/textview1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-        />
+        android:id="@+id/textview1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+    />
 </LinearLayout>
