--- a/res/layout/group.xml
+++ b/res/layout/group.xml
@@ -32,13 +32,20 @@
             android:textSize="15sp"
         />
     </LinearLayout>
+    <ListView
+        android:id="@+id/list1"
+        android:layout_width="300sp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1.0"
+    /> 
     <TextView
         android:id="@+id/text1"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1.0"
-    />  
+    />    
     <Button
             android:background="@drawable/red_button"
             android:id="@+id/logout"
