--- a/res/layout/group.xml
+++ b/res/layout/group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:background="#501213"
@@ -10,8 +10,9 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:layout_gravity="center"
-                  android:orientation="vertical" >
+                  android:layout_centerHorizontal="true"
+                  android:orientation="vertical" 
+                  android:id="@+id/header">
         <Button
             android:background="@drawable/blue_button"
             android:id="@+id/addGroup"
@@ -31,30 +32,27 @@
             style="@style/button_text"
             android:textSize="15sp"
         />
-    </LinearLayout>
-    <ListView
-        android:id="@+id/list1"
-        android:layout_width="300sp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1.0"
-    /> 
-    <TextView
-        android:id="@+id/text1"
-        android:layout_width="300sp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1.0"
-    />    
+    </LinearLayout>    
     <Button
             android:background="@drawable/red_button"
             android:id="@+id/logout"
             android:layout_width="150sp"
             android:layout_height="30sp"
-            android:layout_gravity="bottom|center"
-               
+            android:layout_alignParentBottom="true"     
+            android:layout_centerHorizontal="true"            
             android:text="Logout" 
             style="@style/button_text"
             android:textSize="15sp"
     />
-</LinearLayout>
+    <ListView
+        android:id="@+id/list1"
+        android:layout_width="300sp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"     
+        android:divider="#d9d9d9"
+        android:dividerHeight="1dp"
+        android:listSelector="@drawable/list_row_selector"
+        android:layout_above="@id/logout"
+        android:layout_below="@id/header"
+    />
+</RelativeLayout>
