--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -1,7 +1,58 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
- android:id="@+id/rowTextView" 
- android:layout_width="fill_parent" 
- android:layout_height="wrap_content"
- android:padding="10dp"
- android:textSize="16sp" >
-</TextView>
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="300sp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/list_row_selector"
+                android:padding="8sp" 
+>
+
+    <ImageView
+        android:contentDescription="tempImg"
+        android:id="@+id/thumbnail"
+        android:src="@drawable/nfc_logo32x32"
+        android:layout_width="50sp"
+        android:layout_height="50sp"
+        android:paddingRight="10sp"
+        android:layout_centerVertical="true"
+    />
+
+    <TextView
+        android:id="@+id/groupName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/thumbnail"
+        android:layout_toRightOf="@+id/thumbnail"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        android:textColor="#000000"    />
+
+    <TextView
+        android:id="@+id/groupMembers"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/groupName"
+        android:layout_marginTop="1dip"
+        android:layout_toRightOf="@+id/thumbnail"
+        android:textSize="15sp" />
+    
+    <TextView
+        android:id="@+id/semester"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/groupMembers"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@+id/thumbnail"
+        android:textColor="#666666"
+        android:textSize="13sp" />
+    
+    <ImageView
+        android:contentDescription="tempImg"
+        android:id="@+id/next"
+        android:src="@drawable/arrow"
+        android:layout_width="25sp"
+        android:layout_height="25sp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+    />
+
+</RelativeLayout>
