--- a/res/layout/group.xml
+++ b/res/layout/group.xml
@@ -8,10 +8,11 @@
               android:orientation="vertical" >
  
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:layout_width="wrap_content"
+                  android:layout_width="330sp"
                   android:layout_height="wrap_content"
                   android:layout_centerHorizontal="true"
                   android:orientation="horizontal" 
+                  android:layout_marginBottom="5sp"
                   android:id="@+id/header">
         <Button
             android:background="@drawable/blue_button"
@@ -19,8 +20,7 @@
             android:layout_width="270sp"
             android:layout_height="50sp"
             android:text="+ Add Group" 
-            style="@style/button_text"
-            android:paddingTop="6sp"
+            style="@style/button_text"            
             android:textSize="15sp"
         />
         <Button
@@ -29,20 +29,10 @@
             android:id="@+id/passSched"
             android:layout_width="50sp"
             android:layout_height="50sp"
+            android:layout_marginTop="4sp"
             android:paddingLeft="12sp"
         />
-    </LinearLayout>    
-    <Button
-            android:background="@drawable/red_button"
-            android:id="@+id/logout"
-            android:layout_width="150sp"
-            android:layout_height="30sp"
-            android:layout_alignParentBottom="true"     
-            android:layout_centerHorizontal="true"            
-            android:text="Logout" 
-            style="@style/button_text"
-            android:textSize="15sp"
-    />
+    </LinearLayout>
     <ListView
         android:id="@+id/list1"
         android:layout_width="320sp"
@@ -51,7 +41,6 @@
         android:divider="#d9d9d9"
         android:dividerHeight="1dp"
         android:listSelector="@drawable/list_row_selector"
-        android:layout_above="@id/logout"
         android:layout_below="@id/header"
     />
 </RelativeLayout>
