--- a/res/layout/dialog.xml
+++ b/res/layout/dialog.xml
@@ -28,5 +28,6 @@
         android:gravity="center_horizontal" 
         android:hint="Group Name"      
         android:singleLine="true"
+        android:textColor="#000000"
     />
 </LinearLayout>
