--- a/res/layout/group.xml
+++ b/res/layout/group.xml
@@ -6,6 +6,14 @@
               android:paddingTop="10sp"
               android:paddingBottom="10sp"
               android:orientation="vertical" >
+    <ImageView 
+        android:id="@+id/image1"
+        android:contentDescription="Add Group"
+        android:src="@drawable/add_group256x256"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+    />
     <ListView
         android:id="@+id/list1"
         android:layout_width="340sp"
