--- a/res/layout/share_group.xml
+++ b/res/layout/share_group.xml
@@ -1,35 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:background="#501213"
               android:paddingTop="10sp"
               android:orientation="vertical" >   
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  android:layout_width="300sp"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center"
-                  android:orientation="vertical" >
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:id="@+id/header"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#501213"
                   android:orientation="horizontal" 
-                  android:layout_gravity="right"
-                  android:paddingRight="10sp">       
-            <TextView
-                android:id="@+id/text2"
-                android:layout_width="150sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0"
-                android:paddingTop="10sp"
-            />       
+                  android:layout_alignParentRight="true"
+                  android:paddingRight="10sp"
+                  android:paddingBottom="10sp">
             <TextView
                 android:id="@+id/text1"
-                android:layout_width="80sp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
-                android:text="Tap to Send "            
+                android:text="Tap to Send "   
+                android:lines="1"         
             />      
             <ImageView 
                 android:id="@+id/image1"
@@ -37,14 +28,16 @@
                 android:src="@drawable/nfc_logo32x32"
                 android:layout_width="40sp"
                 android:layout_height="wrap_content"            
-            />   
+            /> 
         </LinearLayout>
-        <TextView
-                android:id="@+id/text3"
-                android:layout_width="150sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.0"
-                android:paddingTop="10sp"
+        <ListView
+            android:id="@+id/list1"
+            android:layout_width="340sp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"     
+            android:divider="#d9d9d9"
+            android:dividerHeight="1dp"
+            android:listSelector="@drawable/list_row_selector"
+            android:layout_below="@id/header"
         />
-    </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
