--- a/res/menu/share_person_activity_actions.xml
+++ b/res/menu/share_person_activity_actions.xml
@@ -9,11 +9,7 @@
           android:title="Share Schedule" 
           android:showAsAction="ifRoom"/>
     <item android:id="@+id/action_logout"
-          android:icon="@drawable/ic_action_delete"
+          android:icon="@drawable/logout"
           android:title="Logout" 
           android:showAsAction="ifRoom"/>
-    <!-- Settings, should always be in the overflow -->
-    <item android:id="@+id/action_settings"
-          android:title="Settings" 
-          android:showAsAction="never"/>
 </menu>
