--- a/res/layout/share_group.xml
+++ b/res/layout/share_group.xml
@@ -5,7 +5,15 @@
               android:background="#501213"
               android:paddingTop="10sp"
               android:orientation="vertical" >   
-              
+    
+    <fragment android:name="com.txstatecs4398.coursemate.CalMainActivity"
+            android:id="@+id/my_fragment"
+            android:layout_width="fill_parent"
+            android:layout_height="320sp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginBottom="10sp"/>
+                 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:id="@+id/header"
                   android:layout_width="fill_parent"
@@ -15,7 +23,8 @@
                   android:layout_alignParentRight="true"
                   android:paddingLeft="10sp"
                   android:paddingRight="10sp"
-                  android:paddingBottom="10sp">
+                  android:paddingBottom="10sp"
+                  android:layout_below="@id/my_fragment">
             <TextView
                 android:id="@+id/text2"
                 android:layout_width="wrap_content"
@@ -42,14 +51,17 @@
             />      
             
         </RelativeLayout>
+        <!--temp size for fragment testing-->
         <ListView
             android:id="@+id/list1"
-            android:layout_width="340sp"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"     
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="10sp"   
+            android:layout_marginRight="10sp"  
             android:divider="#d9d9d9"
             android:dividerHeight="1dp"
             android:listSelector="@drawable/list_row_selector"
             android:layout_below="@id/header"
-        />
+        />        
 </RelativeLayout>
