Updated Calendar File Structure
Moved calendar package to collections and put all calendar .java inside
it.
Striped Cal from beginning of all class files, and renamed
CalMainActivity to CalendarFragment.

--- a/res/layout/share_group.xml
+++ b/res/layout/share_group.xml
@@ -6,7 +6,7 @@
               android:paddingTop="10sp"
               android:orientation="vertical" >   
     
-    <fragment android:name="com.txstatecs4398.coursemate.CalMainActivity"
+    <fragment android:name="com.txstatecs4398.coursemate.collections.calendar.CalendarFragment"
             android:id="@+id/my_fragment"
             android:layout_width="fill_parent"
             android:layout_height="320sp"
