--- a/res/layout/deleter_list_row.xml
+++ b/res/layout/deleter_list_row.xml
@@ -19,9 +19,9 @@
     <ImageView
         android:contentDescription="tempImg"
         android:id="@+id/delete"
-        android:src="@drawable/arrow"
-        android:layout_width="25sp"
-        android:layout_height="25sp"
+        android:src="@drawable/side_bar"
+        android:layout_width="10sp"
+        android:layout_height="45sp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
     />
