Added CalendarFragment to SharePerson

--- a/res/layout/share_person.xml
+++ b/res/layout/share_person.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:background="#501213"
               android:paddingTop="10sp"
               android:orientation="vertical" >   
-    
-    <CalendarView
-        android:id="@+id/calendar1"
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="300sp" 
-    />
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#501213"
                   android:orientation="horizontal" 
-                  android:layout_gravity="right"
-                  android:paddingRight="50sp">       
+                  android:layout_centerHorizontal="true"
+                  android:id="@+id/header"
+                  android:layout_marginBottom="10sp"
+                  >       
         <TextView
             android:id="@+id/text2"
             android:layout_width="wrap_content"
@@ -43,4 +39,13 @@
             
         />   
     </LinearLayout>
-</LinearLayout>
+    
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                 android:id="@+id/person_fragment"
+                 android:layout_width="fill_parent"
+                 android:layout_height="wrap_content" 
+                 android:layout_marginLeft="10sp"
+                 android:layout_marginRight="10sp"
+                 android:layout_marginBottom="10sp"
+    android:layout_below="@id/header"/>
+</RelativeLayout>
